// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`popup.styles Cabecalho DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 32px;
  border-top-left-radius: 13px;
  border-top-right-radius: 13px;
}

<div
  className="c0"
/>
`;

exports[`popup.styles Container DEVE ser igual ao snapshot 1`] = `
.c0 {
  position: absolute;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  height: 100%;
  background-color: #00000080;
}

<div
  className="c0"
/>
`;

exports[`popup.styles PopupBotao  DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 16px;
}

<div
  className="c0"
/>
`;

exports[`popup.styles PopupBox DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-bottom: 13px;
  border-radius: 13px;
  background-color: #FFFFFF;
}

<div
  className="c0"
/>
`;

exports[`popup.styles Principal DEVE ser igual ao snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-left: 21px;
  padding-right: 21px;
  gap: 8px;
}

<div
  className="c0"
/>
`;

exports[`popup.styles Texto DEVE ser igual ao snapshot 1`] = `
.c0 {
  font-size: 18px;
  font-family: AvertaStd-Regular;
  color: #000000;
  margin-top: 0px;
  text-transform: none;
  line-height: 26px;
  cursor: pointer;
}

<h2
  className="c0 "
  cursor="pointer"
/>
`;

exports[`popup.styles iconeFechar DEVE ser igual ao snapshot 1`] = `
.c0 {
  margin-right: 8px;
  margin-top: 4px;
  cursor: pointer;
}

<svg
  aria-hidden="true"
  className="svg-inline--fa fa-xmark fa-xl c0"
  data-icon="xmark"
  data-prefix="fas"
  focusable="false"
  height={32}
  role="img"
  style={Object {}}
  viewBox="0 0 384 512"
  width={32}
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M342.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L192 210.7 86.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L146.7 256 41.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L192 301.3 297.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L237.3 256 342.6 150.6z"
    fill="currentColor"
    style={Object {}}
  />
</svg>
`;
